--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   openapi-python-client-version:
     description: "The version of openapi-python-client to use when generating the client package"
     required: false
-    default: "latest"
+    default: NOT_SPECIFIED
   openapi-file:
     description: The path to the openapi document to generate a client library for
     required: false
