--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Generate python client package for openapi spec"
-description: ""
+name: "Generate A Python Client Package From An OpenAPI file"
+description: "Generates a python client package from an openapifile using the openapi-python-client project"
 branding:
   icon: "target"
   color: "green"
