Apply suggestions from code review
Co-authored-by: Dylan Anthony <43723790+dbanty@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Generate A Python Client Package From An OpenAPI file"
-description: "Generates a python client package from an openapifile using the openapi-python-client project"
+description: "Generates a Python client package from an OpenAPI document using the openapi-python-client project"
 branding:
   icon: "target"
   color: "green"
