--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       - uses: openapi-generators/openapi-python-client-action@v2
         with:
-          openapi-url: https://raw.githubusercontent.com/openapi-generators/openapi-python-client/main/end_to_end_tests/openapi.json
+          openapi-url: https://raw.githubusercontent.com/openapi-generators/openapi-python-client/main/end_to_end_tests/baseline_openapi_3.0.json
